--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 					<exclude>**/*</exclude>
 				</excludes>
 			</resource>
+			<resource>
+				<directory>src/assembly</directory>
+				<excludes>
+					<exclude>**/*</exclude>
+				</excludes>
+			</resource>
 		</resources>
 		<pluginManagement>
 			<plugins>
@@ -145,18 +151,136 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 									</includes>
 								</filter>
 							</filters>
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>de.uni_potsdam.hpi.asg.configgen.ConfigGenMain</mainClass>
-								</transformer>
-							</transformers>
+<!-- 							<transformers> -->
+<!-- 								<transformer -->
+<!-- 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> -->
+<!-- 									<mainClass>de.uni_potsdam.hpi.asg.configgen.ConfigGenMain</mainClass> -->
+<!-- 								</transformer> -->
+<!-- 							</transformers> -->
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>unixbuild</id>
+			<activation>
+				<os>
+					<family>unix</family>
+				</os>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>appassembler-maven-plugin</artifactId>
+						<version>1.8.1</version>
+						<executions>
+							<execution>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>assemble</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<platforms>
+								<platform>unix</platform>
+							</platforms>
+							<programs>
+								<program>
+									<mainClass>de.uni_potsdam.hpi.asg.configgen.ConfigGenMain</mainClass>
+									<id>ASGconfiggen</id>
+								</program>
+							</programs>
+							<repositoryLayout>flat</repositoryLayout>
+							<repositoryName>lib</repositoryName>
+							<assembleDirectory>${project.build.directory}</assembleDirectory>
+							<unixScriptTemplate>src/assembly/unix_apptemplate</unixScriptTemplate>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.5.3</version>
+						<configuration>
+							<descriptors>
+								<descriptor>src/assembly/unix_assembly.xml</descriptor>
+							</descriptors>
+						</configuration>
+						<executions>
+							<execution>
+								<id>make-assembly</id>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>windowsbuild</id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>appassembler-maven-plugin</artifactId>
+						<version>1.8.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>assemble</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<platforms>
+								<platform>windows</platform>
+							</platforms>
+							<programs>
+								<program>
+									<mainClass>de.uni_potsdam.hpi.asg.configgen.ConfigGenMain</mainClass>
+									<id>ASGconfiggen</id>
+								</program>
+							</programs>
+							<repositoryLayout>flat</repositoryLayout>
+							<repositoryName>lib</repositoryName>
+							<assembleDirectory>${project.build.directory}</assembleDirectory>
+							<windowsScriptTemplate>src/assembly/windows_apptemplate</windowsScriptTemplate>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.5.3</version>
+						<configuration>
+							<descriptors>
+								<descriptor>src/assembly/windows_assembly.xml</descriptor>
+							</descriptors>
+						</configuration>
+						<executions>
+							<execution>
+								<id>make-assembly</id>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>de.uni_potsdam.hpi.asg</groupId>
