--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 							<programs>
 								<program>
 									<mainClass>de.uni_potsdam.hpi.asg.configgen.ConfigGenMain</mainClass>
-									<id>ASGconfiggen</id>
+									<id>ASGconfiggen_gui</id>
 								</program>
 							</programs>
 							<repositoryLayout>flat</repositoryLayout>
@@ -250,7 +250,7 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 							<programs>
 								<program>
 									<mainClass>de.uni_potsdam.hpi.asg.configgen.ConfigGenMain</mainClass>
-									<id>ASGconfiggen</id>
+									<id>ASGconfiggen_gui</id>
 								</program>
 							</programs>
 							<repositoryLayout>flat</repositoryLayout>
