fix logger issue

--- a/pom.xml
+++ b/pom.xml
@@ -71,10 +71,10 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 				</excludes>
 			</resource>
 			<resource>
-				<directory>src/main/resources/jar</directory>
-				<includes>
-					<include>**/*</include>
-				</includes>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>**/*</exclude>
+				</excludes>
 			</resource>
 		</resources>
 		<pluginManagement>
@@ -146,6 +146,11 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 								<program>
 									<mainClass>de.uni_potsdam.hpi.asg.configgen.ConfigGenMain</mainClass>
 									<id>ASGconfiggen_gui</id>
+									<jvmSettings>
+										<extraArguments>
+											<extraArgument>-Dlog4j.configurationFile=@BASEDIR@/config/configgen_log4j2.xml</extraArgument>
+										</extraArguments>
+									</jvmSettings>
 								</program>
 							</programs>
 							<repositoryLayout>flat</repositoryLayout>
@@ -204,6 +209,11 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 								<program>
 									<mainClass>de.uni_potsdam.hpi.asg.configgen.ConfigGenMain</mainClass>
 									<id>ASGconfiggen_gui</id>
+									<jvmSettings>
+										<extraArguments>
+											<extraArgument>-Dlog4j.configurationFile=@BASEDIR@/config/configgen_log4j2.xml</extraArgument>
+										</extraArguments>
+									</jvmSettings>
 								</program>
 							</programs>
 							<repositoryLayout>flat</repositoryLayout>
