--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,15 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 			<url>http://www.gnu.org/licenses/gpl.txt</url>
 		</license>
 	</licenses>
+	<prerequisites>
+		<maven>3.0</maven>
+	</prerequisites>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<common.version>2.1.0-SNAPSHOT</common.version>
+		<common.version>3.0.0-SNAPSHOT</common.version>
 		<logic.version>0.2.0-SNAPSHOT</logic.version>
 		<resyn.version>1.2.0-SNAPSHOT</resyn.version>
-		<delay.version>1.2.3-SNAPSHOT</delay.version>
+		<delay.version>1.3.0-SNAPSHOT</delay.version>
 	</properties>
 	<build>
 		<resources>
@@ -77,38 +80,10 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 				</excludes>
 			</resource>
 		</resources>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-dependency-plugin</artifactId>
-										<versionRange>2.9</versionRange>
-										<goals>
-											<goal>unpack</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.6.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -129,7 +104,7 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>appassembler-maven-plugin</artifactId>
-						<version>1.8.1</version>
+						<version>2.0.0</version>
 						<executions>
 							<execution>
 								<phase>prepare-package</phase>
@@ -161,7 +136,7 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 					</plugin>
 					<plugin>
 						<artifactId>maven-assembly-plugin</artifactId>
-						<version>2.5.3</version>
+						<version>3.0.0</version>
 						<configuration>
 							<descriptors>
 								<descriptor>src/assembly/unix_assembly.xml</descriptor>
@@ -192,7 +167,7 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>appassembler-maven-plugin</artifactId>
-						<version>1.8.1</version>
+						<version>2.0.0</version>
 						<executions>
 							<execution>
 								<phase>package</phase>
@@ -224,7 +199,7 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 					</plugin>
 					<plugin>
 						<artifactId>maven-assembly-plugin</artifactId>
-						<version>2.5.3</version>
+						<version>3.0.0</version>
 						<configuration>
 							<descriptors>
 								<descriptor>src/assembly/windows_assembly.xml</descriptor>
