--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.uni_potsdam.hpi.asg</groupId>
 	<artifactId>asgconfiggen</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<organization>
 		<name>Hasso-Plattner-Institut fuer Softwaresystemtechnik GmbH</name>
 		<url>http://www.hpi.uni-potsdam.de</url>
@@ -46,10 +46,10 @@ along with ASGconfiggen.  If not, see <http://www.gnu.org/licenses/>.
 	</prerequisites>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<common.version>3.0.0-SNAPSHOT</common.version>
-		<logic.version>0.2.0-SNAPSHOT</logic.version>
-		<resyn.version>1.2.0-SNAPSHOT</resyn.version>
-		<delay.version>1.3.0-SNAPSHOT</delay.version>
+		<common.version>3.0.0</common.version>
+		<logic.version>0.2.0</logic.version>
+		<resyn.version>1.2.0</resyn.version>
+		<delay.version>1.3.0</delay.version>
 	</properties>
 	<build>
 		<resources>
